k8s/punto7/ingress/svc-clusterip-apifeedback.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-feedback-cip
  namespace: name2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-feedback
