k8s/punto7/ingress/ingress-paths.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: name2
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /security/
        backend:
          serviceName: api-seguridad-cip
          servicePort: 8080
      - path: /api/feedback/
        backend:
          serviceName: api-feedback-cip
          servicePort: 8080
